[package]
name = "hanzo-messages"
version = "1.1.12"
edition = "2021"
authors = ["Hanzo AI Inc"]
license = "MIT"
repository = "https://github.com/hanzoai/hanzo-node"
homepage = "https://hanzo.ai"
description = "Message primitives for Hanzo AI platform"

[dependencies]
serde_json = "1.0.117"
chacha20poly1305 = "0.7.1"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
thiserror = "2.0"
hex = "0.4.3"
aes-gcm = "0.10.3"
blake3 = "1.5"
rust_decimal = "1.17.0"
base64 = "0.22.0"
utoipa = { version = "4.2", features = ["yaml"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.36", features = ["rt", "rt-multi-thread", "macros", "fs", "io-util", "net", "sync", "time"] }
async-trait = "0.1.81"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
os_path = "0.8.0"

[lib]
crate-type = ["rlib"]

[dev-dependencies]
serial_test = "0.5"
tempfile = "3.8"

[[test]]
name = "hanzo-message-tests"
path = "tests/hanzo_message_tests.rs"

[[test]]
name = "hanzo-name-tests"
path = "tests/hanzo_name_tests.rs"
