[package]
name = "hanzo-model-discovery"
description = "Hanzo AI - Model Discovery Library"
license = "MIT"
version = "1.1.12"
edition = "2021"

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
percent-encoding = "2.3"

[dev-dependencies]
tokio-test = "0.4"